--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -58,18 +58,45 @@
             <h1 class="text-center">Overview of Training Dataset</h1>
         </div>
     {% endblock %}
-
-    {% for id in ids %}
-        <div id="{{id}}"></div>
-    {% endfor %}
+	
+  	<h4 id="tag-line" class="ml-5 mt-3">First row of charts</h4>
+      <div class="row ml-5">
+            <div class="col-6"> 
+                <div id="fig1">
+                    <div id="{{ids[0]}}"></div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div id="fig2">
+                    <div id="{{ids[1]}}"></div>
+                </div>
+            </div>
+        </div>
+ 	 <h4 id="tag-line" class="ml-5 mt-3">Second row of charts</h4>
+     	 <div class="row ml-5">
+            <div class="col-6"> 
+                <div id="fig3">
+                    <div id="{{ids[2]}}"></div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div id="fig4">
+                    <div id="{{ids[3]}}"></div>
+                </div>
+            </div>
+        </div>
 </div>
 
 <script type="text/javascript">
-    const graphs = {{graphJSON | safe}};
-    const ids = {{ids | safe}};
-    for(let i in graphs) {
-        Plotly.plot(ids[i], graphs[i].data, graphs[i].layout);
-    }
+       // plots the figure with id
+       // id must match the div id above in the html
+       var figures = {{figuresJSON | safe}};
+       var ids = {{ids | safe}};
+       for(var i in figures) {
+           Plotly.plot(ids[i],
+               figures[i].data,
+               figures[i].layout || {});
+        }
 </script>
 
 </body>
