--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -23,7 +23,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="https://www.udacity.com/">Made with Udacity</a></li>
-                <li><a href="https://github.com/">Contact</a></li>
+                <li><a href="https://github.com/judithleao">GitHub</a></li>
             </ul>
         </div>
     </div>
@@ -55,36 +55,41 @@
 <div class="container">
     {% block content %}
         <div class="page-header">
-            <h1 class="text-center">Overview of Training Dataset</h1>
+            <h1 class="text-center">Overview of Original Dataset</h1>
         </div>
     {% endblock %}
 	
-  	<h4 id="tag-line" class="ml-5 mt-3">First row of charts</h4>
+  	<h2 id="tag-line" class="ml-5 mt-3">Disaster Response Topics</h2>
+    <h4 id="tag-line" class="ml-5 mt-3">Biplot based on Principal Component Analysis.<br>Similar topics cluster together. In the bottom left,
+    for instance, we see a weather- and environment-related cluster. Towards the right, there is a basic-needs cluster with clothing, water, food, sheltre and medical aid.
+    In the center and top left, infrastructure-related topics cluster. In the center, the topics death, refugees, search and rescue and missing people constitute a fourth 
+    clear topical cluster related to people.<br>The size of the circles indicates how frequently a message is tagged with a topic.</h4>
       <div class="row ml-5">
-            <div class="col-6"> 
                 <div id="fig1">
                     <div id="{{ids[0]}}"></div>
                 </div>
-            </div>
-            <div class="col-6">
+      </div>
+    <h2 id="tag-line" class="ml-5 mt-3">Prevalence of Disaster Response Topics</h2>
+    <h4 id="tag-line" class="ml-5 mt-3">Barchart showing which percentage of messages has been tagged with each each Disaster Response Topic.<br>Shows that the data is hugely imbalanced with most topics being a tag for under 10% of messages</h4>
+      <div class="row ml-5">
                 <div id="fig2">
                     <div id="{{ids[1]}}"></div>
                 </div>
-            </div>
-        </div>
- 	 <h4 id="tag-line" class="ml-5 mt-3">Second row of charts</h4>
-     	 <div class="row ml-5">
-            <div class="col-6"> 
+      </div>
+    <h2 id="tag-line" class="ml-5 mt-3">Types of messages</h2>
+    <h4 id="tag-line" class="ml-5 mt-3">Barchart showing share of different sources for messages. Most messages are actually news.</h4>
+      <div class="row ml-5">
                 <div id="fig3">
                     <div id="{{ids[2]}}"></div>
                 </div>
-            </div>
-            <div class="col-6">
+      </div>
+    <h2 id="tag-line" class="ml-5 mt-3">Language from original messages</h2>
+    <h4 id="tag-line" class="ml-5 mt-3">Barchart showing which language a message was originally submitted in.<br>The majority of messages did not have information provided for the original message. Out of the messages that had an original message, most were in French.</h4>
+      <div class="row ml-5">
                 <div id="fig4">
                     <div id="{{ids[3]}}"></div>
                 </div>
-            </div>
-        </div>
+      </div>
 </div>
 
 <script type="text/javascript">
