Improved appearance of graphs (labelling, legend, order)

--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -86,7 +86,7 @@
                 </div>
       </div>
     <h2 id="tag-line" class="ml-5 mt-3">Language from original messages</h2>
-    <h4 id="tag-line" class="ml-5 mt-3">Barchart showing which language a message was originally submitted in.<br>The majority of messages did not have information provided for the original message. Out of the messages that had an original message, most were in French.</h4>
+    <h4 id="tag-line" class="ml-5 mt-3">Barchart showing which language a message was originally submitted in.<br>The majority of messages did not have information provided for the original message - these were excluded from the chart. Out of the messages that had an original message, most were in French.</h4>
       <div class="row ml-5">
                 <div id="fig4">
                     <div id="{{ids[3]}}"></div>
